--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "nodemailer": "^6.9.1",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.28.0"
+    "sequelize": "^6.28.0",
+    "sib-api-v3-sdk": "^8.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20",
